...
     <string name="app_name">Campus Compass</string>
     <string name="title_activity_maps">Campus Compass</string>
     <string name="splash_screen">Splash screen</string>
     <string name="cc_logo">Campus Compass Logo</string>
     <string name="cc_title">Campus Compass Title</string>
     <string name="cc_uni">Concordia University</string>
     <string name="Favorites_Feature_Name">My Places</string>
     <string name="Calendar_Feature_Name">Schedule</string>
     <string name="Explore_Feature_Name">Explore</string>
     <string name="Shuttle_Feature_Name">Shuttle Bus</string>
      <string name="Settings_Feature_Name">Settings</string>
     <string name="Map_Feature_Name">Map</string>
     <string name="Settings">Settings</string>
     <string name="sgw">SGW</string>
     <string name="loy">LOY</string>
     <string name="dash">-</string>
     <string name="directions">Directions</string>
     <string name="contentDescription_BuildingImage">Building Image</string>
...
